RESOLVED FIXED133941
[New Multicolumn] Elements with rounded corners and overflow:hidden do not properly clip their content
https://bugs.webkit.org/show_bug.cgi?id=133941
Summary [New Multicolumn] Elements with rounded corners and overflow:hidden do not pr...
Radu Stavila
Reported 2014-06-16 08:11:49 PDT
Created attachment 233157 [details] Test-case Elements with rounded corners and overflow:hidden do not properly clip their content. See attached test-case. It works fine in Chrome and FF.
Attachments
Test-case (1.15 KB, text/html)
2014-06-16 08:11 PDT, Radu Stavila
no flags
Patch (6.88 KB, patch)
2014-06-27 07:13 PDT, Radu Stavila
no flags
Radu Stavila
Comment 1 2014-06-27 07:13:21 PDT
WebKit Commit Bot
Comment 2 2014-06-28 01:45:17 PDT
Comment on attachment 233982 [details] Patch Clearing flags on attachment: 233982 Committed r170566: <http://trac.webkit.org/changeset/170566>
WebKit Commit Bot
Comment 3 2014-06-28 01:45:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.