[New Multicolumn] Elements with rounded corners and overflow:hidden do not properly clip their content https://bugs.webkit.org/show_bug.cgi?id=133941

Reviewed by Darin Adler.

Source/WebCore:
When having a multicol element inside an element with overflow:hidden and border-radius,
the fragments representing the columns need to have the border radius set also, to ensure
proper clipping.

Test: fast/multicol/newmulticol/multicol-clip-rounded-corners.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::collectFragments):

LayoutTests:
Added test for multicol element inside an element with overflow:hidden and border radius.

* fast/multicol/newmulticol/multicol-clip-rounded-corners-expected.html: Added.
* fast/multicol/newmulticol/multicol-clip-rounded-corners.html: Added.


Canonical link: https://commits.webkit.org/152404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170566 268f45cc-cd09-0410-ab3c-d52691b4dbfc